@@ -103,6 +103,21 @@ COLORCODES=The following codes are available for channels definitions:\n\r\
 BLINK, ITALICS, ^b^~wBGWHITE, ^w^~gBGGREEN, ^w^~bBGBLUE, ^w^~rBGRED, ^B^~yBGYELLOW, ^k^~cBGCYAN, \
 ^w^~pBGPURPLE, ^NBGBLACK, BGDEFAULT
 
+ARCHON_CRECORD=CRECORD
+CRECORD=<ABILITY>\
+Usage    : CRECORD LIST/START [MINS]/STOP/MINLEVEL [LEVEL]/...\n\r\
+Usage    : .../ADD [PLAYER]/DEL [PLAYER]\n\r\
+Example  : crecord start 15\n\r\
+This tool automatically creates a combat log for a player when \
+they gain a level, if they are above a minimum level, and if \
+they gained the current level within a minimum number of minutes. \
+It will continue to log until the next level is gained.  \
+To activate the tool, enter CRECORD START [number of minutes]. \
+Players will then start being recorded automatically.  Combat \
+recording can also be managed manually using ADD/DEL.  The \
+default minimum level is 10, but can be modified with the MINLEVEL \
+command.  Logs are kept in the dbfs directory '::/resources/clogs/'.
+
 ANTIDOTE=\
 Ability    : ANTIDOTE\n\r\
 Parameters : empty, or poison keyword\n\r\
